fixed width of slides so they aren't overlapping

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ main {
 .content {
     display: flex;
     border: 3px solid rgb(64,64,64);;
-    width: 525px;
+    width: 550px;
     overflow: hidden;
     position: relative;
     margin: 0 auto;
@@ -50,7 +50,7 @@ main {
 .slide {
     list-style: none;
     height: 250px;
-    min-width: 517px;
+    min-width: 530px;
     display: flex;
     justify-content: center;
     align-items: center;
